--- a/toplist/style.css
+++ b/toplist/style.css
@@ -2,7 +2,6 @@
     outline: 1px solid red !important;
     
 }
-
 *
 {
     -webkit-box-sizing: border-box;
@@ -10,6 +9,12 @@
     -ms-box-sizing: border-box;
     box-sizing: border-box;
                     
+}
+
+.app{
+    display:flex; //for support safari
+    display: -webkit-flex; //works with chrome 29+ IE11+ mozilla 28+
+        
 }
 .screenshot{
     max-width: 460
